--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - wordpress_html:/var/www/html
       - ./plugins/01-hello:/var/www/html/wp-content/plugins/01-hello
       - ./plugins/02-editable:/var/www/html/wp-content/plugins/02-editable
+      - ./plugins/03-controls:/var/www/html/wp-content/plugins/03-controls
     depends_on:
       - mysql
 
