--- a/plugins/03-controls/package.json
+++ b/plugins/03-controls/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@wordpress/scripts": "^3.4.0"
+    "@wordpress/scripts": "^3.4.0",
+    "css-loader": "^3.2.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "style-loader": "^1.0.0"
   },
   "scripts": {
     "start": "wp-scripts start",
