--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - ./plugins/01-hello:/var/www/html/wp-content/plugins/01-hello
       - ./plugins/02-editable:/var/www/html/wp-content/plugins/02-editable
       - ./plugins/03-controls:/var/www/html/wp-content/plugins/03-controls
+      - ./plugins/04-recipe:/var/www/html/wp-content/plugins/04-recipe
     depends_on:
       - mysql
 
