--- a/plugins/04-recipe/package.json
+++ b/plugins/04-recipe/package.json
@@ -3,17 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@wordpress/scripts": "^3.4.0",
-    "mini-css-extract-plugin": "^0.8.0"
+    "@babel/preset-react": "^7.0.0",
+    "cross-env": "^5.2.0",
+    "css-loader": "^3.2.0",
+    "laravel-mix": "^4.1.2",
+    "node-sass": "^4.12.0",
+    "resolve-url-loader": "3.1.0",
+    "sass-loader": "^7.3.1"
   },
   "scripts": {
-    "start": "wp-scripts start",
-    "build": "wp-scripts build"
-  },
-  "dependencies": {
-    "css-loader": "^3.2.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^1.0.0"
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   }
 }
