--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,10 +25,7 @@ services:
       WORDPRESS_DB_PASSWORD: app@secret
     volumes:
       - wordpress_html:/var/www/html
-      - ./plugins/01-hello:/var/www/html/wp-content/plugins/01-hello
-      - ./plugins/02-editable:/var/www/html/wp-content/plugins/02-editable
-      - ./plugins/03-controls:/var/www/html/wp-content/plugins/03-controls
-      - ./plugins/04-recipe:/var/www/html/wp-content/plugins/04-recipe
+      - ./app-blocks:/var/www/html/wp-content/plugins/app-blocks
     depends_on:
       - mysql
 
