--- a/app-blocks/package.json
+++ b/app-blocks/package.json
@@ -12,7 +12,7 @@
     "sass-loader": "^7.3.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js"
+    "start": "node .dev/scripts/start.js",
+    "build": "node .dev/scripts/build.js"
   }
 }
